# bude-sql

./: .gitignore  CMakeLists.txt  README.md
UI/: Scenes.hpp  test_raylib.cpp
UI/Scenes/: DAvl.hpp  DBTree.hpp  DExtendible.hpp  SceneCredits.hpp  SceneDocumen.hpp  SceneMainMenu.hpp  SceneStructuresDocumen.cpp  SceneStructuresVisualize.cpp  SceneVisualize.hpp  VAVL.cpp  VAvl.hpp  VBTree.hpp  VBtree.cpp  VExtendible.cpp  VExtendible.hpp
UI/Util/: Button.hpp  GUIManager.hpp  QueryVisual.hpp  SceneManager.hpp
src/avl/: avl.hpp  node.hpp
src/avl/test/: persona.cpp  persona.hpp  script.zsh  testavl.cpp  write_file.cpp
src/bplus/: bplus.cpp  bplus.h  bplusnode.h  test_bplus.cpp
src/bplus2/: Updated_AppleStore.csv  apple.cpp  apple.h  apple_bplus.cpp  apple_bplus.h  bplus.hpp  bplusT.cpp  bplustxt.cpp  main.cpp  run.sh  tmp.cpp  usefull_structures.cpp  usefull_structures.hpp
src/data/: write_dat.cpp
src/exhash/: ExHash.hpp  test_exhash.cpp  utils.hpp
src/model/: apple.cpp  apple.h  apple.hpp
src/parser/: avl_queries.hpp  parser.cpp  parser.h  query.cpp  query.h  scanner.cpp  scanner.h  statement.cpp  statement.h  test_parser.cpp
src/proxy/: main.cpp  proxy.cpp  proxy.h  test_proxy.cpp
